--- a/tcc2/bibliografia.bib
+++ b/tcc2/bibliografia.bib
@@ -212,6 +212,12 @@ address = {USA}
 	Year = {2022}
 }
 
+@article{apple,
+	Author = {Apple},
+	Title = {MacOs Montery},
+	Year = {2022}
+}
+
 @article{typescript,
 	Author = {Microsoft},
 	Title = {TypeScript},
@@ -366,6 +372,7 @@ publisher = {EDITORA ATLAS S.A},
 	Title = {Scrum},
 	Year = {2017}
 }
+
 
 @article{leticia,
 	Author = {L. S. Santos},
