--- a/tcc2/editaveis/abreviaturas.tex
+++ b/tcc2/editaveis/abreviaturas.tex
@@ -5,7 +5,7 @@
   \item[AC] Anticoncepcional
   \item[MEIS] \textit{Multifactor Emotional Intelligence Scale}
   \item[TDPM] Transtorno disfórico pré menstrual 
-  \item[TCC] Trabalho de conclusão de curso
+  \item[TCC] Trabalho de Conclusão de Curso
   \item[TPM] Tensão pré-menstrual  
   \item[SR] Sistema de recomendação
   \item[FC] Filtragem colaborativa
