--- a/tcc2/editaveis/agradecimentos.tex
+++ b/tcc2/editaveis/agradecimentos.tex
@@ -25,8 +25,8 @@
     estudo. 
     
     Agradeço, por fim, a mim mesma pela persistência e coragem; por me dedicar por
-    incontáveis horas a este sonho; por acreditar que é possível construir algo valioso com muita determinação
-    ; por conseguir, mesmo diante de tantas
+    incontáveis horas a este sonho; por acreditar que é possível construir algo valioso com muita determinação; 
+    por conseguir, mesmo diante de tantas
     dificuldades, finalizar esta etapa da minha vida.
     
     \end{agradecimentos}
