--- a/tcc2/editaveis/apendices.tex
+++ b/tcc2/editaveis/apendices.tex
@@ -113,7 +113,53 @@
             \includegraphics[keepaspectratio=true,scale=0.7]{figuras/Tab22.pdf}
         \end{figure}
         
-        
-        
+    \chapter{Tabulação Teste de Usabilidade}
+    \label{usertest}
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.7]{figuras/ap1.png}
+    \end{figure}
+
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.8]{figuras/ap2.png}
+    \end{figure}
+
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.8]{figuras/ap3.png}
+    \end{figure}
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.8]{figuras/ap4.png}
+    \end{figure}
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.8]{figuras/ap5.png}
+    \end{figure}
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.8]{figuras/ap6.png}
+    \end{figure}
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.8]{figuras/ap7.png}
+    \end{figure}
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.8]{figuras/ap8.png}
+    \end{figure}
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.8]{figuras/ap9.png}
+    \end{figure}
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.8]{figuras/ap10.png}
+    \end{figure}
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[keepaspectratio=true,scale=0.8]{figuras/ap11.png}
+    \end{figure}
     \end{apendicesenv}
     
