--- a/tcc2/editaveis/conclusao.tex
+++ b/tcc2/editaveis/conclusao.tex
@@ -1,4 +1,4 @@
-\chapter[Considerações Finais]{Considerações Finais}
+\chapter[Conclusão]{Conclusão}
 \label{ch:conclusao}
 
 Neste capítulo, serão apresentadas as considerações finais sobre esse Trabalho de
