--- a/tcc2/editaveis/resumo.tex
+++ b/tcc2/editaveis/resumo.tex
@@ -4,7 +4,7 @@
     mudanças de humor, comportamento e sintomas físicos. Essas mudanças podem influenciar na 
     disposiçao para realizar certas tarefas cotidianas. Para 
     ajudar no autoconhecimento, melhorar a inteligência emocional 
-    dessas pessoas e possibilitar que elas utilizem dos benefícios e lidem com os 
+    dessas pessoas, e possibilitar que elas usufruam dos benefícios e lidem com os 
     malefícios 
     de forma saudável e consciente, esse trabalho implementa um aplicativo com um sistema de 
     sugestão de tarefas baseado em 
@@ -12,8 +12,8 @@
     em um sistema de recomendação colaborativo, procurando sugerir tarefas 
     que podem ser executadas com mais facilidade ou dificuldade. Com o levantamento bibliográfico, 
     foi possível utilizar o método do calendário para determinar a fase do ciclo. Juntamente com o 
-    estudo de caso, foi possível levantar os perfis e tarefas cotidianas a serem utilizados no sistema de 
-    recomendação.
+    estudo de caso, foi possível levantar os perfis e tarefas os perfis e as tarefas cotidianas, 
+    sendo esses insumos utilizados no sistema de recomendação.
     
      \vspace{\onelineskip}
         
